MACRO(ADD_CPPADCG_UNIT_TEST name)
  INCLUDE_DIRECTORIES(SYSTEM ${cppad_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(SYSTEM ${cppadcodegen_INCLUDE_DIR})
  ADD_PINOCCHIO_UNIT_TEST(${name} PACKAGES cppadcg)
  ADD_DEPENDENCIES(test-cppadcg test-cpp-cppad-cppadcg-${name})
  SET_PROPERTY(TARGET test-cpp-cppad-cppadcg-${name} PROPERTY CXX_STANDARD 11)
  TARGET_LINK_LIBRARIES(test-cpp-cppad-cppadcg-${name} PUBLIC ${cppad_LIBRARY} ${CMAKE_DL_LIBS})
ENDMACRO()

IF(BUILD_WITH_AUTODIFF_SUPPORT)
  IF(BUILD_WITH_CODEGEN_SUPPORT)
    ADD_CUSTOM_TARGET(test-cppadcg)
    SET_TARGET_PROPERTIES(test-cppadcg PROPERTIES EXCLUDE_FROM_DEFAULT_BUILD True)
    
    ADD_CPPADCG_UNIT_TEST(basic)
    ADD_CPPADCG_UNIT_TEST(algorithms)
    ADD_CPPADCG_UNIT_TEST(joint-configurations)
  ENDIF(BUILD_WITH_CODEGEN_SUPPORT)
ENDIF(BUILD_WITH_AUTODIFF_SUPPORT)
